# xkcdbot

./: .dockerignore  CONTRIBUTING.rst  Dockerfile  LICENSE  README.rst  deploy.sh  xkcdbot.cabal
src/: Main.hs  Xkcdify.hs
