name: xkcdbot
version: 0.1.0
synopsis: Simple Telegram bot that does xkcd37
license: MIT
license-file: LICENSE
author: Chua Hou
maintainer: human+github@chuahou.dev
copyright: Copyright (c) 2020 Chua Hou
build-type: Simple
cabal-version: >= 2.0

executable xkcdbot
    main-is: Main.hs
    other-modules: Xkcdify
    build-depends:
        base ^>= 4.12,
        telegram-bot-simple ^>= 0.3.0,
        text ^>= 1.2.3
    hs-source-dirs: src
    default-language: Haskell2010
    ld-options: -Wl,-rpath -Wl,$ORIGIN
